// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Link renders correctly with \`unvisited\` state 1`] = `
<a
  class="govuk-link govuk-link--no-visited-state"
  data-discover="true"
  href="/the-link"
>
  Test Link
</a>
`;

exports[`Link renders correctly without \`unvisited\` state 1`] = `
<a
  class="govuk-link"
  data-discover="true"
  href="/the-link"
>
  Test Link
</a>
`;
